--- a/index.html
+++ b/index.html
@@ -21,6 +21,9 @@
           <li>
             <a href="contact.html">İletişim</a>
           </li>
+          <li>
+            <a href="#last">Dahası</a>
+          </li>
         </ul>
       </nav>
     </header>
@@ -66,6 +69,7 @@
         <hr />
       </article>
       <article>
+        <div id="last">
         <h2>Üçüncü Yazı</h2>
         <img src="https://picsum.photos/id/437/600/300" alt="Yazı 3" />
         <p>Lorem ipsum dolor sit.</p>
@@ -94,6 +98,7 @@
         </ul>
       </nav>
     </footer>
+  </div>
     <!-- Footer - End -->
   </body>
 </html>
